app/sass/assets/drm-sass-utilities/javascript-components/_offscreen-menu.scss
/*-----------------------------------------------------------------------------
    Offscreen Menu
-----------------------------------------------------------------------------*/

// works with fluid and fixed layouts
@mixin drm-offscreen-menu($bk-color: $main-color, $width: 15%) {
    width: $width;
    position: absolute;
    // left: -$width;
    left: 0;
    height: 100%;
    background-color: $bk-color;
    z-index: 100;

    ul {
        @include drm-nav-bar-solid-stacked();

        li a {
            padding: 10px 15px;
            background-color: $bk-color;

            &:hover {
                background-color: lighten($bk-color, 20%);
            }
        }
    }   
}

